# zzz_rag_xxx

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHAT_FLOW.md  README.md  chat.md  check_db.py  docker-compose.yml  ingestion.md  plan.md  test_api.py
app_data/: rag_meta.db
backend/: Dockerfile  app.py  chunking.py  config.py  dependencies.py  embedding_cache.py  embeddings.py  mineru_wrapper.py  persistence.py  pyproject.toml  requirements.txt  schemas.py  token_utils.py  tokenizer_registry.py
backend/routes/: __init__.py  agentic.py  chat.py  documents.py  extraction.py  helpers.py  ingest.py  system.py
backend/services/: gpu_phases.py  ingestion.py  rag.py
backend/services/agentic/: __init__.py  modes.py  orchestrator.py  prompts.py  tools.py
backend/services/extraction/: __init__.py  engine.py  persistence.py  schemas.py
backend/services/ingestion/: __init__.py  api.py  classification.py  context.py  models.py  ocr.py  pipeline.py  postprocess_runner.py  reprocess.py  taxonomy.py  uploads.py  worker.py
backend/utils/: conversation.py  files.py  gpu.py  vectors.py
diagnostics/: Dockerfile  app.py  requirements.txt
docker/: llama-cpp.Dockerfile  llm_controller.py
docs/: agentic_rag_plan.md  extraction_plan.md  gemini.md  grok.md
docs/architecture/: database_tables.md  doc_taxonomy_and_prompts.md  ingestion_workflow.md  rag_workflow.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  ChatPage.jsx  IngestPage.css  IngestPage.jsx  main.jsx
frontend/src/components/: DiagnosticsPanel.jsx  RetrievalPanel.jsx
indices/: .gitkeep
ocr_module/: Dockerfile  app.py  mineru_wrapper.py  pyproject.toml
rag_mineru/: docker-compose.yml
rag_mineru/backend/: app.py  embeddings.py  mineru_wrapper.py  pyproject.toml
rag_mineru/frontend/: Dockerfile  index.html  package.json
(+3 files in other folders)
