[project]
name = "rag-mineru"
version = "0.1.0"
description = "GPU-ready RAG ingestion: PyMuPDF + MinerU + local llama.cpp embeddings"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "aiosqlite>=0.19",
  "PyMuPDF>=1.24.0",
  "tiktoken>=0.7.0",
  "numpy>=1.24",
  "openai>=1.40.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []
